@@ -25,13 +25,13 @@
 </tr>
 
 #dash_quality_body
-<div class="default data">
+<div class="default">
 	<div class="maxwrap">
 		<table class="name">
 			<tr>
 				<td>Publisher Name: <span>Converted from ID</span></td>
 				<td>{dash_quality_pub_name}</td>
-				<td rowspan=2 class="visit"><a href="http://d-portal.org/ctrack.html?&publisher={dash_quality_pub}#view=publisher" target="_blank">View portal</a></td>
+				<td rowspan=2 class="visit"><a href="http://d-portal.org/ctrack.html?&publisher={dash_quality_pub}#view=publisher" target="_blank">View on d-portal</a></td>
 			</tr>
 			<tr>
 				<td>Publisher ID:</td>
@@ -46,17 +46,17 @@
 					<div>Total number of activities reported by this publisher.</div>
 				</td>
 				<td>
-					<div><a href="#country_list">{dash_quality_country_count}</a></div>
+					<div>{dash_quality_country_count}</div>
 					<div>Countries</div>
 					<div>Total number of recipient countries reported by this publisher.</div>
 				</td>
 			</tr>
 			<tr>
-				<td colspan=2>
+				<td colspan=2 class="data_numbers">
 					<table class="actdate_data country_data">
 						<tr>
-							<th>Activity State</th>
-							<th>Activities</th>
+							<th>Activity Type</th>
+							<th>Number of activities</th>
 						</tr>
 						<tr>
 							<td>Total</td>
@@ -144,47 +144,54 @@
 </div>
 
 #css
-a.back_link.dash			{margin-right:20px; margin-top:40px; text-align:right;}
+a.back_link.dash			{color:#bdbdbd; margin-right:20px; margin-top:40px; text-align:right;}
 .note						{font-style:italic; font-weight:initial;}
 .note.div					{font-size:0.65em; line-height:1.2em; padding-top:5px;}
 .country_subtitle			{font-size:1.4em; margin-top:10px; margin-bottom:10px;}
 
 table.quality		{border-collapse:separate; border-spacing:20px; margin:0 auto; width:960px; table-layout:fixed;}
-table.quality td	{border:1px solid #ccc; font-size:1.4em; padding:20px; text-align:center;}
+table.quality td	{background-color:#111738; border-radius:6px; font-size:1.4em; padding:20px; text-align:center;}
 table.quality td div:first-of-type	{font-size:3.6em; padding-bottom:20px;}
 table.quality td div:nth-of-type(2)	{font-size:1.0em;}
-table.quality td div:last-of-type	{color:#444; font-size:0.65em; line-height:1.2em; padding-top:10px; vertical-align:bottom;}
+table.quality td div:last-of-type	{font-size:0.65em; line-height:1.2em; padding-top:10px; vertical-align:bottom;}
 
-table.country_data th				{border-bottom:1px solid #ccc; font-size:0.65em; font-weight:bold; padding:30px 0 10px 0; text-align:left;}
+table.country_data th				{border-bottom:1px solid #3d4363; font-size:0.9em; font-weight:bold; padding:30px 0 10px 0; text-align:left;}
 table.country_data th:last-child	{text-align:right;}
 table.country_data					{width:100%; border-collapse:collapse; border-spacing:20px; margin:0 auto;}
 table.country_data tr:first-child td, table.country_data td		{border:0; text-align:left;}
-table.country_data td					{border-bottom:1px solid #ccc; font-size:0.9em; padding:10px 30px 10px 0;}
-table.country_data td:last-child		{padding-right:5px; text-align:right;}
+table.country_data td					{background-color:initial; border-bottom:1px solid #3d4363; font-size:0.9em; padding:0px 40px 0px 0;}
+table.country_data td:last-child		{padding-right:5px; text-align:right; line-height:36px;}
 table.country_data td div.country_title	{font-size:1.8em; padding:10px 0 0 0;}
 table.country_data td:last-child div.country_title	{text-align:right;}
 table.country_data tr:last-child td		{border-bottom:0;}
 table.country_data td.cc				{padding:0;}
 table.country_data td.cc a				{display:block; padding:10px 30px 10px 0;}
 
+table.actdate_data.country_data td	{line-height:46px;}
+
 table.country_data td.country_invalid a {color:#444;}
 table.country_data td.country_invalid   {color:#444; background-color:#eee;}
 
-table.name					{margin:0 auto; width:920px;}
+table.quality td.data_numbers		{background-color:initial;}
+
+table.name					{margin:0 auto; width:960px;}
 table.name td				{padding-bottom:20px; vertical-align:middle;}
 table.name tr:first-child td:first-child span	{display:block; font-size:0.7em; padding-top:5px; font-style:italic;}
 table.name td:first-child	{font-size:1.2em; width:20%;}
 table.name td:nth-child(2)	{font-size:2.2em;}
 table.name td.visit			{padding:0px; text-align:center; vertical-align:top; width:200px;}
-table.name td.visit a		{display:block; border:1px solid #ccc; color:#444; padding:20px 0px;}
+table.name td.visit a		{display:block; background-color:#111738; color:#bdbdbd; padding:20px 0px; border-radius:6px;}
+
+table.pub td:last-child		{font-size:1.2em;}
 
 table.pub.dataset			{margin:0 auto; margin-bottom:40px; margin-top:40px; max-width:920px; width:920px;}
 table.pub.dataset td		{padding:5px 0;}
 table.pub.dataset td.set	{padding:0;}
 table.pub.dataset td.set a	{display:block; padding:5px 0;}
-table.pub.dataset th		{border-bottom:1px solid #ccc; padding:5px 0;}
+table.pub.dataset th		{border-bottom:1px solid #3d4363; padding:5px 0;}
 table.pub.dataset th span.note	{display:inline-block; font-size:0.9em; padding-left:10px;}
 
-table.actdate_data.country_data td:first-child, table.actdate_data.country_data th:first-child	{text-align:right; width:60%;}
-table.actdate_data.country_data th:first-child	{padding:30px 30px 0 0;}
+table.actdate_data.country_data td:first-child, table.actdate_data.country_data th:first-child	{text-align:right; width:55%;}
+table.actdate_data.country_data th:first-child	{padding:30px 40px 0 0;}
 table.actdate_data.country_data td:last-child, table.actdate_data.country_data th:last-child	{text-align:left;}
+table.actdate_data.country_data td:last-child	{font-size:1.5em;}
