@@ -52,7 +52,7 @@
 	<td class="date" title="{table_active_date_tip_text}">{date_end}</td>
 	<td class="value">
 		<div class="activities_spend_wrap">
-			<div class="activities_spend" title="{activities_spend_text}">{commitment}<span>{currency}</span></div>
+			<div class="activities_spend" title="{activities_spend_text}">{commitment}<span class="currency">{currency}</span></div>
 			<div class="activities_barchart_wrap" title="{activities_percentage_tip_text}">
 				<div class="activities_percent_max">
 					<div style="width:{pct}px;" class="activities_percent"></div>
