@@ -1,3 +1,8 @@
+Development Portal (2017-12-25 shi)
+==============================
+Update DASH css
+
+
 Development Portal (2017-12-19 shi)
 ==============================
 Minor css fixes
